# Hr_assistant_2

./: pyproject.toml
.chainlit/: config.toml
data/chromadb/: chroma.sqlite3
hr_assistant/: __init__.py  config.py  database.py  document_processor.py  semantic_chunking.py  utils.py
