[project]
name = "selfwork-hr-assistant-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Luca Bozzali",email = "“lucathebozza@gmail.com”"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14.0"
dependencies = [
    "chromadb (>=1.5.9,<2.0.0)",
    "openai (>=2.44.0,<3.0.0)",
    "ollama (>=0.6.2,<0.7.0)",
    "chainlit (>=2.11.1,<3.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "langchain-openai (>=1.3.3,<2.0.0)",
    "markitdown (>=0.1.6,<0.2.0)"
]

[tool.poetry]
packages = [{include = "selfwork_hr_assistant_2", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
